--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.10.17",
+    "antd": "^5.22.5",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.0.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.14"
   },
   "scripts": {
